--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "npm run development -- --watch"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
@@ -11,6 +12,13 @@
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.5",
         "sass": "^1.56.1",
-        "vite": "^4.0.0"
+        "vite": "^4.4.8"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^4.2.3",
+        "vue": "^3.2.36",
+        "vue-axios": "^3.5.2",
+        "vue-loader": "^17.0.1",
+        "vue-router": "^4.2.4"
     }
 }
